# ResearchFlow

./: .gitignore  README.md
backend/: main.py  models.py  nodes.py  pyproject.toml  rag.py  requirements.txt  research_node.py  state.py
backend/chroma_db/: chroma.sqlite3
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.css
frontend/src/components/: ArtifactCanvas.tsx  ChatInterface.tsx  Logo.tsx  Mermaid.tsx  Sidebar.tsx
frontend/src/components/ui/: AgenticLoader.tsx  TwinklingStars.tsx  shooting-stars.tsx
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: Login.tsx  Register.tsx
frontend/src/services/: apiClient.ts  authService.ts  storageService.ts
frontend/src/types/: index.ts
